--- a/CallRestAPINetCore/CallRestAPINetCore.csproj
+++ b/CallRestAPINetCore/CallRestAPINetCore.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
+    <PackageReference Include="NLog.Config" Version="4.5.6" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.1.0" />
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
 
